tetrateci/tsb-util/fixtures/general_generated/tsb-objects/demo-1/direct/reviews_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/tenant: bookinfo-tenant-1
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/trafficGroup: bookinfo-t1-w1-direct-tg0
    tsb.tetrate.io/workspace: bookinfo-t1-ws1
  name: bookinfo-reviews
  namespace: t1-w1-demo-d-bookinfo-mid-n0
spec:
  gateways:
  - mesh
  hosts:
  - reviews.t1-w1-demo-d-bookinfo-mid-n0.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.t1-w1-demo-d-bookinfo-mid-n0.svc.cluster.local
        subset: v1
      weight: 60
    - destination:
        host: reviews.t1-w1-demo-d-bookinfo-mid-n0.svc.cluster.local
        subset: v2
      weight: 30
    - destination:
        host: reviews.t1-w1-demo-d-bookinfo-mid-n0.svc.cluster.local
        subset: v3
      weight: 10
