tetrateci/tsb-util/fixtures/general_generated/tsb-objects/demo-1/direct/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/gatewayGroup: bookinfo-t1-w1-direct-gg0
    tsb.tetrate.io/tenant: bookinfo-tenant-1
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/workspace: bookinfo-t1-ws1
  name: bookinfo-virtualservice
  namespace: t1-w1-demo-d-bookinfo-front-n0
spec:
  exportTo:
  - .
  gateways:
  - t1-w1-demo-d-bookinfo-front-n0/t1-w1-demo-d-bookinfo-front-n0-gateway
  hosts:
  - t1-w1-demo-d-bookinfo-front-n0.tetrate.test.com
  http:
  - name: http
    route:
    - destination:
        host: productpage.t1-w1-demo-d-bookinfo-front-n0.svc.cluster.local
      weight: 100
